@@ -6,3 +6,6 @@ log_path = /var/log/ansible.log
 display_args_to_stdout = True
 forks = 50
 retry_files_enabled = False
+bin_ansible_callbacks = True
+stdout_callback = default_summarized
+callback_whitelist = default_summarized
